--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ button:hover {
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background: url(/img/login-bg.jpg) no-repeat center;
+  background: url(./img/login-bg.jpg) no-repeat center;
   background-size: cover;
 }
 
